typescript/checker/tests/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment1.ts.stderr
error: TS1162
 --> $DIR/tests/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment1.ts:4:11
  |
4 | foo({ name?, id? });
  |           ^

error: TS1162
 --> $DIR/tests/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment1.ts:4:16
  |
4 | foo({ name?, id? });
  |                ^

